# data-engineering-project-playground

./: CLAUDE.md  LICENSE  README.md  main.py  plan.md  pyproject.toml  tasks.md
.claude/skills/planning-tests-cases-skill/: SKILL.md
.claude/skills/unit-tests-skill/: SKILL.md
.github/workflows/: run-unit-tests.yml
config/: sample.yaml
configs/: sample.yaml
prd/: prd-cli-default-config.md
prd-implementation/: prd-cli-default-config.md
src/: __init__.py  cli.py  cli_generate.py  config.py  config_loader.py  generator_core.py  main.py  payload_encoder.py  validation.py  writers.py
src/configs/: cli.py  config.py  config_parameters_enums.py  dimensions_enums.py  output_enums.py  rate_enums.py
src/errors/: config_error.py  yaml_error.py
src/utils/: yaml_loader.py
tests/: test_cli.py  test_config.py  test_config_loader.py
tests/configs/: test_cli.py  test_config_negative_cases.py  test_config_positive_cases.py  value_consts.py
tests/utils/: test_yaml_loader.py
